--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,9 +10,11 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "formik": "^2.4.6",
     "prettier": "^3.3.1",
     "react-router-dom": "^6.26.1",
-    "vite": "^5.1.6"
+    "vite": "^5.1.6",
+    "yup": "^1.4.0"
   },
   "dependencies": {
     "bootstrap": "^5.3.0",
