Created the validation on backend app. Need to work wit exceptions and create submissions

--- a/Backend/ai-hybrid-backend-impl/src/main/resources/application.yaml
+++ b/Backend/ai-hybrid-backend-impl/src/main/resources/application.yaml
@@ -3,3 +3,9 @@ spring:
     name: ${USERNAME}
     password: ${PASSWORD}
     driver-class-name:
+
+logging:
+  level:
+    org.springframework.web: DEBUG
+    org.hibernate: DEBUG
+    ai.hybrid: DEBUG
