New in the branch: Created Mongo repository. Tested were put. ApiError class was added for Exception handling

--- a/Backend/ai-hybrid-backend-impl/src/main/resources/application.yaml
+++ b/Backend/ai-hybrid-backend-impl/src/main/resources/application.yaml
@@ -1,8 +1,7 @@
 spring:
-  datasource:
-    name: ${USERNAME}
-    password: ${PASSWORD}
-    driver-class-name:
+    data:
+      mongodb:
+        uri: mongodb://green101:37017,green102:37017,green103:37017/pointer_processor
 
 logging:
   level:
