--- a/Backend/maven/ai-hybrid-backend-bom/pom.xml
+++ b/Backend/maven/ai-hybrid-backend-bom/pom.xml
@@ -30,7 +30,13 @@
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-validation</artifactId>
-                <version>3.3.2</version>
+                <version>${spring-boot.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-data-mongodb</artifactId>
+                <version>${spring-boot.version}</version>
             </dependency>
 
             <dependency>
@@ -38,6 +44,35 @@
                 <artifactId>springdoc-openapi-ui</artifactId>
                 <version>1.6.14</version>
             </dependency>
+
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-test</artifactId>
+                <version>${spring-boot.version}</version>
+                <scope>test</scope>
+                <exclusions>
+                    <exclusion>
+                        <groupId>junit</groupId>
+                        <artifactId>junit</artifactId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
+
+            <!-- JUnit Jupiter API (JUnit 5) for writing tests -->
+            <dependency>
+                <groupId>org.junit.jupiter</groupId>
+                <artifactId>junit-jupiter-api</artifactId>
+                <version>5.7.0</version> <!-- Compatible with Spring Boot 2.5.3 -->
+                <scope>test</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>org.junit.jupiter</groupId>
+                <artifactId>junit-jupiter-engine</artifactId>
+                <version>5.7.0</version> <!-- Compatible with Spring Boot 2.5.3 -->
+                <scope>test</scope>
+            </dependency>
+
 
         </dependencies>
     </dependencyManagement>
