--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,9 +10,9 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@vitejs/plugin-react": "^4.3.2",
     "formik": "^2.4.6",
     "prettier": "^3.3.1",
-    "react-router-dom": "^6.26.1",
     "vite": "^5.1.6",
     "yup": "^1.4.0"
   },
@@ -20,6 +20,7 @@
     "bootstrap": "^5.3.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.1"
   }
 }
