--- a/Quartz/pom.xml
+++ b/Quartz/pom.xml
@@ -47,6 +47,11 @@
       <version>1.18.24</version>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-log4j12</artifactId>
+      <version>1.7.30</version>
+    </dependency>
   </dependencies>
 
   <build>
